--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -8,6 +8,74 @@ This is the ChangeLog for Physics2D.NET
 
 
 ==Physics2D.Net==
+===1.2.0.0===
+Changed: made the Joints Implement an interface specific to the solver.
+
+Changed: Implemented the Solver from Super Split Box2D. This changed the joints quite a bit but basically left everything else alone.
+
+Changed: Made it so a joint will be removed when one of the bodies it is attached to is removed.
+
+Added: JointCount property to Body.
+
+Changed: Cleaned up some code in the Sequential Impulse Solver.
+
+Added: IContact and ICollisionInfo for use with CollisionEventArgs
+
+Changed: the solvers and all classes involved to added contact info to the collided event.
+
+Moved: BroadPhasedCollisionDetector into the Detectors namespace.
+
+Moved: CollsionSolver into the Solvers namespace.
+
+Changed: Made the Lifespan class impliment IDuplicateable
+
+Added: ImplicitCastCollection to be used by the Solver to convert Contacts to IContact without making a copy of the contacts.
+Changed: CollisionEventArgs and ICollisionInfo to return a ReadOnlyCollection of Contacts not an array.
+
+Added: CollectionEventArgs class.
+
+Added: events to PhysicsEngine for when objects are added to or removed from it.
+Changed: the logic of removing and adding so they will “short circuit” so to not add empty lists. 
+
+Removed: the PhysicsConstants class and moved its contents to PhysicsHelper.
+
+Added: a IsPending property to IPhysicsEntity,
+changed: Made it so it will throw an error in the add method if a object is added more then once. 
+
+Added: A Transform Method to ALVector2D.
+Changed: Made the Body.ApplyMatrix transform the Position ALVector2D,then recreate the matrix to apply to the shape.
+
+Fixed: MakeCentroidOrigin.
+
+Added: BoundingBox2DShape.
+
+Changed: Made the distance grid use Jagged arrays.
+
+Renamed: SITag to SequentialImpulsesTag
+
+Moved: the SequentialImpulsesTag outside of the SequentialImpulsesSolver
+
+Removed: SolverVelocity from PhysicsState.
+
+Added: biasImpulse to SequentialImpulsesTag.
+
+Added: tag1 and tag2 to HidgeJoint.
+
+Added: Pending Event to IPhysicsEntity
+
+Fixed: a bug that trying to add an item to the engine in a AddRange method that has already been added would corrupt the state.
+
+Fixed: a few problems that made the PhysicsEngine class not threadsafe.
+
+Added: IsAdded property to IPhysicsEntity.
+changed: made it so the bodies effected by a joint must be added to the engine before the joint.
+
+Changed: made it so it throws ArgumentNullExceptions when you pass a null object to the Add or AddRange methods in PhysicsEngine.
+
+Added: IJoint interface.
+
+Added: RemovedEventArgs.
+
 ===1.1.0.0===
 changed: made it so the line's thickness is actaully its thickness so the lines are no longer twice as thick as the parameter passed.
 
