--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -8,6 +8,100 @@ This is the ChangeLog for Physics2D.NET
 
 
 ==Physics2D.Net==
+===1.3.0.0===
+changed: inlined code in the Body.UpdateVelocity method.
+
+changed: ApplyMatrix to use MathHelper.ClampAngle instead of its own logic.
+
+Removed: The BiasMultiplier from the PreApply method in Arbiter.
+
+changed: The SequentialImpulsesSolver.Arbiter to have a reference to the SequentialImpulsesSolver containing it.
+
+changed: The SequentialImpulsesSolver.Arbiter to use the values in the SequentialImpulsesSolver instead of having the values passed to it.
+
+Added: Reduce Method to Polygon.
+
+renamed: BoundingBox2D to BoundingRectangle and moved it to the AdvanceMath.Geometry2D namespace.
+
+added: TypeConverter attribuites to PhysicsState and MassInfo
+
+removed: System.Data from reference list.
+
+replaced: most of the foreach loops in SequentialImpulsesSolver.Solve with normal for loops
+
+Changed: IDuplicateable to also impliment IClone
+
+Changed: Implimented all the math from the Box2D GCD 2007.
+
+Added: math to handle Restitution.
+
+changed: the sweep and prunes use of nodes so that it will reuse linked list nodes.
+
+added: a Pivot Joint class.
+
+removed: code in the Arbiter class that was not supposed to be there.
+
+changed: a few shape objects to utilize methods and classes in the AdvanceMath.Geometry2D namespace.
+
+moved: some logic in Polygon into advanceMaths BoundingPolygon
+
+renamed: Polygon.CalcArea and CalcCentroid to GetArea and GetCentroid
+
+changed: The Solver and Detecter with a few speed improvements.
+
+added: CreateFromBitmap to the Polygon class a BitmapHelper class that assists it. 
+
+fixed: Body.duplicate to copy the boolean values.
+
+changed: the collisionIgnorer to not have the IsCollidable value and moved it to Body.
+
+Added: CollisionGroupIgnorer that impliments CollisionIgnorer
+
+removed: CanCollide(1) from Body. You should use CanCollide(2)
+
+moved: CollisionIgnorer into Ignorers directory.
+
+Added: another version of the  PhysicsHelper.GetRelativeVelocity to be used by PivotJoint.
+
+changed: the Sweep and Prune to be a little more optimized for particles.
+
+changed: The shape object to make the inertia multiplier one of its constructors parameters. 
+
+Added: AngleJoint.
+
+Added: CollisionObjectIgnorer.
+
+changed: Sequential impulse solver to clear forces after velocity is updated instead of after update position.
+
+changed: Sweep and Prune to be faster (by alot), by replacing the wrappers dictionary with a List and using BinarySearch for the second sweep.
+
+changed: IntersectionInfo into a struct.
+
+changed: TryGetIntersection to reflect the change of IntersectionInfo.
+
+changed: the Arbiter to minimize the number of contact creations. this was to massivly reduce the number of creation and deletion of objects. IE less memory allocation.
+
+added: new method for throwing errors to classes that are added to the engine.
+
+changed: Joints.bodies to be the ReadOnlycollection.
+
+Fixed: A bug in the Reduce methods that would evaluate the last edge incorrectly.
+
+Changed: the Polygon.Reduce method to evaluate vertex removal based on the how it would 
+change the area instead of on the difference in angle. 
+
+Changed: Sweep and Prune to sort with a IComparer instead of a delegate. (Speed boost)
+
+Changed: Sweep and Prune to be faster by adding a custom IntList class to store 
+colliders. 
+
+Added: a IsInverted Property to the CollisionIgnorer class.
+
+changed: made the code more aware of divide by zero errors.
+
+Added: Body1 and Body2 properties to IContact.
+
+
 ===1.2.0.0===
 Changed: made the Joints Implement an interface specific to the solver.
 
@@ -135,6 +229,71 @@ Changed: the SequentialImpulsesSolver.Solve method to copy the Arbiters into an 
 Completely new, See release notes for explanation.
 
 ==AdvanceMath==
+===1.6.0.0===
+Added: a new define: UNSAFE
+
+Changed: made it so all code that has or uses unsafe code blocks is inside "#if UNSAFE #endif" statements. 
+
+Renamed: RadianMin to ClampAngle
+
+Changed: ClampAngle's logic to not use loops.
+
+renamed: GetAngleDifference to AngleSubtract.
+
+Changed: AngleSubtract's logic to be better.
+
+renamed: RadainsToDegrees to ToDegrees
+
+renamed: DegreesToRadains to ToRadains
+
+changed: Vector2D angle methods/properties to use pass by reference versions.
+
+added: Hermite and catmullRom to all the vector classes using the code in Vector2D.
+
+added: Max and Min to all vector classes.
+
+Removed: FromArray methods from all the Vector Classes since they were redundent.
+
+removed: some unneeded wrapper methods from MathHelper.
+
+Added: Geometry2D namespace and contained classes.(BIG CHANGE)
+
+removed: System.Data from reference list.
+
+added: WrapClamp to MathHelper.
+
+changed: optimized a few methods.
+
+changed: all constants to not be float by default. allow sthe compiler to figure out if they are double or float.
+
+changed: Matri3x3.FromRotationX to be public.
+
+changed: the normalize methods on the vetor classes to be inlined.
+
+fixed: MathHelper.HALF_THREE_PI to be the correct value.
+
+fixed: ClampAngle and WrapClamp in MathHelper
+
+added: distance and distanceSq to all Vector classes.
+
+changed: the contains methods to be closer to XNAs model.
+
+fixed: an elusive bug with the BoundingPolygon.GetDistance method and it should be faster (in theory).
+
+changed: LineSegment.Getdistance so it will no longer return a negative value.
+
+changed: the order of parameters to the BoundingRectagle's constructors.
+
+removed: origin from Vector2D use Zero instead.
+
+added: Point2D
+
+added: IntersectionType
+
+changed: made the code more aware of divide by zero errors.
+
+Added: the Clamped class.
+
 ===1.5.0.0===
 Added: Lerp to the matrix structs.
 
@@ -154,7 +313,6 @@ Added pass by reference versions of most methods.
 Removed all copyrighted code for re-licensing as MIT except for the Quaternion. 
 
 Re-licensed as MIT.
-
 
 
 
