--- a/wiki/Faq.wiki
+++ b/wiki/Faq.wiki
@@ -1,4 +1,4 @@
-#This is where common questions and their answers are stored.
+#summary This is where common questions and their answers are stored.
 
 = Frequently Asked Questions =
 
