Edited wiki page through web user interface.

--- a/wiki/BasicIntroduction.wiki
+++ b/wiki/BasicIntroduction.wiki
@@ -1,4 +1,5 @@
 #summary Shows a Basic Introduction of the engine.
+#labels Featured,Phase-Deploy
 You first need to understand how initialize and use the engine.
 This page is meant to give you a general overview on how to do a basic setup of the engine.
 
